// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink should render correctly 1`] = `
<a
  className="skip-link skip-link--hidden"
  href="#main"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to main content
</a>
`;

exports[`SkipLink should support arbitrary props 1`] = `
<a
  className="skip-link skip-link--hidden"
  href="#main"
  onBlur={[Function]}
  onFocus={[Function]}
  testID="123"
>
  Skip to main content
</a>
`;

exports[`SkipLink should support custom class names 1`] = `
<a
  className="skip-link skip-link--hidden custom-classname"
  href="#main"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to main content
</a>
`;
